--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,49 @@
-@import 'theme.css';
+@import "theme.css";
 
 .cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap:2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
 }
 
-figure{
-    display: flex;
-    box-shadow: 4px 1px 10px -4px gray;
-    margin:0;
+@media screen and (width < 512px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
+figure {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 4px 1px 10px -4px gray;
+  margin: 0;
 }
 
 figure > img {
-    width:50%;
-    object-fit: cover;
+  width: 50%;
+  object-fit: cover;
 }
-
 
 figcaption {
-    padding: var(--spacing2);
+  padding: var(--spacing2);
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: space-between;
+}
+figcaption > div > div {
+  color: var(--intermediate);
+}
+
+@media screen and (width<512px) {
+  figcaption {
+    width: 100%;
+  }
+  figure > img {
+    width: 100%;
+    object-fit: cover;
+  }
+  .cards {
     display: flex;
     flex-direction: column;
-    width:50%;
-    justify-content: space-between;
-
-}
-figcaption > div > div{
-    color: var(--intermediate);
-
+  }
 }
